--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <style>
     .box{
         width: 100px; height: 100px;
-        background-color: red;
+        background-color: blue;
     }
    </style>
     <title>Document</title>
