--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <style>
     .box{
         width: 100px; height: 100px;
+        float:left
         background-color: blue;
     }
    </style>
