--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <style>
     .box{
         width: 100px; height: 100px;
-        float:left
+        float:left;
         background-color: blue;
     }
    </style>
