--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         .container{
             width: 960; margin: 0px auto;
         }
+        .header{ height: 20px; background-color: red;}
+        .nav{height: 20px; background-color: green;}
+        .footer{height: 20px; background-color: blue;}
     </style>
     <title>Document</title>
 </head>
