container width px

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         .container{
-            width: 960; margin: 0px auto;
+            width: 960px; margin: 0px auto;
         }
         .header{ height: 20px; background-color: red;}
         .nav{height: 20px; background-color: green;}
