--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
     <style>
-        .container{
-            width: 960px; margin: 0px auto;
-        }
+        .container{width: 960px; margin: 0 auto;}
         .header{ height: 20px; background-color: red;}
         .nav{height: 20px; background-color: green;}
         .footer{height: 20px; background-color: blue;}
+        .center{
+          overflow: hidden;
+        }
+        .aside{
+          height: 200px; 
+          background-color: blueviolet; 
+          float:left;
+          width: 30%;
+        } 
+        .section{
+          height: 200px; 
+          background-color: cornflowerblue; 
+          width: 70%;
+          float: left;
+        }
     </style>
     <title>Document</title>
 </head>
@@ -15,8 +28,11 @@
     <div class="container">
         <div class="header"></div>
         <div class="nav"></div>
-        <div class="center"></div>
-        <div class="footer"></div>
+        <div class="center">
+          <div class="aside"></div>
+          <div class="section"></div>
+        </div>
+        <div class="footer"></div>  
     </div>
 </body>
 </html>
