오버플로우히든속성

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           float: left;
         }
     </style>
-    <title>Document</title>
+    <title>오버플로우 히든</title>
 </head>
 <body>
     <div class="container">
